# prisminfer

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  Plan.md  README.md  THIRD_PARTY_NOTICES.md  actionlint.yaml
.github/workflows/: c2-clearance-self-hosted.yml  cmake-ci.yml  cuda-kernel-self-hosted.yml  cuda-probe-self-hosted.yml  offload-profitability-self-hosted.yml  project-automation.yml
configs/: 1gb-safe-cpu.json  1gb-safe-gpu-probed.json  90b-hybrid-offline.json  90b-hybrid-simulated.json  90b-overclaim-rejected.json  9b-constrained-kernel-gate.json  benchmark-cpu-baseline.json  benchmark-offload-profitability.json  benchmark-offload-rejected.json  evidence-policy-v1.json  ggml-tensor-eligibility.json  kv-baseline-1gb-fake.json  model-cell-catalog.json  sample-plan-v1.json
docs/: c2-synthetic-clearance.md  cap-semantics.md  ci-and-project-workflows.md  claim-taxonomy.md  codex-environment.md  dependency-pins.md  host-memory-and-io-telemetry.md  implementation-plan-phase1-to-phase4.md  kernel-benchmark-methodology.md  kv-cache-and-compression-research.md  phase0-evidence.md  phase0-exit-audit.md  phase1-evidence.md  phase1-exit-audit.md  phase1-implementation-plan.md  phase2-evidence.md  phase2-exit-audit.md  phase2-implementation-plan.md  phase2-kv-baseline.md  phase2-quality-gates.md  phase3-evidence.md  phase3-exit-audit.md  phase3-implementation-plan.md  phase3-profitability-policy.md  phase4-90b-validation-policy.md  phase4-evidence.md  phase4-exit-audit.md  phase4-implementation-plan.md  phase5-compute-kernel-research-plan.md  phase5-evidence.md  phase6-compression-architecture.md  phase6-evidence.md  phase6-implementation-plan.md  research-roadmap-constrained-llm-inference.md  risk-register.md  runtime-state-machine.md  validation-matrix.md  windows-wddm-telemetry-policy.md
docs/adaptive-runtime/: actuator-and-recovery-matrix.md  architecture.md  execution-and-testing-plan.md  novelty-and-gap-matrix.md  references.md  roadmap.md  scale-capacity-and-bandwidth-admission.md  scope-and-requirements.md  security-privacy-reproducibility.md  session-thesis-and-evidence-map.md  threshold-registry.md  windows-evidence-protocol.md
docs/adaptive-runtime-v2/: README.md  architecture.md  decisions-and-red-team.md  evidence-thresholds-and-security.md  major-milestones.md  optimizer-mathematics.md  program-charter.md  research-hypotheses-and-references.md  safety-actuation-and-admission.md
docs/archive/: README.md  council-constrained-vram-consensus.md  phase4-measured-offload-runbook.md
include/prisminfer/: admission_cell_identity.h  admission_token.h  allocator_tracker.h  atomic_file.h  backend.h  backend_memory_observer.h  benchmark.h  benchmark_comparator.h  c2_case_policy.h  c2_clearance_receipt.h  checked_arithmetic.h  claim_taxonomy.h  config.h  cuda_context_probe.h  errors.h  evidence_bundle.h  exclusive_gpu_lease.h  flat_json.h  gpu_admission_session.h  gpu_cap_policy.h  gpu_thermal.h  host_admission.h  host_memory_tracker.h  hybrid_plan.h  kernel_benchmark_manifest.h  kernel_benchmark_manifest_schema.h  kernel_evidence.h  kv_cache_ledger.h  kv_compression_policy.h  memory_cap.h  memory_ledger.h  model_sidecar.h  native_worker.h  offload_planner.h  profitability_policy.h  quality_gate.h  runtime_state.h  sha256.h  supervisor_admission.h  supervisor_watchdog.h  (+4 more)
schemas/: benchmark_manifest.schema.json  c2_clearance_receipt.schema.json  committed_evidence_bundle.schema.json  evidence_bundle.schema.json  evidence_input_record.schema.json  evidence_policy.schema.json  evidence_record.schema.json  evidence_runner_manifest.schema.json  ggml_tensor_eligibility.schema.json  kernel_benchmark_manifest.schema.json  model_artifact_record.schema.json  model_cell_catalog.schema.json  phase6_kernel_gate.schema.json  prism_sidecar.schema.json  quantization_receipt.schema.json  sample_plan.schema.json  source_manifest.schema.json  telemetry.schema.json
scripts/: admit-model-artifact.py  c2-supervisor-invocation.ps1  dev-clean.ps1  dev-setup.ps1  evidence-runner.py  inventory-gguf.py  run-bounded-cpu-process.ps1  run-c2-clearance.ps1  test-benchmark-emitter.ps1  test-model-artifact-verification.ps1  test-model-cell-catalog.ps1  validate-json-schema.py  validate-model-cell-catalog.ps1  validate-plan-project-sync.ps1  verify-evidence-bundle.py  verify-model-artifact.py  verify.ps1  win32_handle_fs.py
src/: config.cpp  errors.cpp
src/backend/: fake_backend.cpp  llama_backend.cpp  null_backend.cpp
src/benchmark/: atomic_file.cpp  benchmark_comparator.cpp  flat_json.cpp  kernel_benchmark_manifest.cpp  kernel_benchmark_manifest_schema.cpp  kernel_evidence.cpp  manifest_writer.cpp  sha256.cpp  transfer_metrics.cpp
src/governor/: admission_token.cpp  allocator_tracker.cpp  backend_memory_observer.cpp  checked_arithmetic.cpp  claim_taxonomy.cpp  cuda_context_probe.cpp  exclusive_gpu_lease.cpp  gpu_admission_session.cpp  gpu_cap_policy.cpp  host_admission.cpp  host_memory_tracker.cpp  memory_cap.cpp  memory_ledger.cpp  profitability_policy.cpp  supervisor_admission.cpp  supervisor_watchdog.cpp  usability_policy.cpp
src/kernels/: ggml_q4_k_reference.cpp  q4_decode_gemv.cpp
src/kv/: kv_cache_ledger.cpp  kv_compression_policy.cpp
src/offload/: offload_planner.cpp
src/planner/: hybrid_plan.cpp
src/quality/: quality_gate.cpp
src/runtime/: native_worker.cpp
src/telemetry/: gpu_thermal.cpp  telemetry_clock.cpp  telemetry_jsonl.cpp  windows_evidence.cpp
src/validation/: c2_case_policy.cpp  c2_clearance_receipt.cpp  evidence_bundle.cpp  model_sidecar.cpp
tests/cuda/: test_q4_decode_gemv_cuda.cu
tests/unit/: test_admission_token.cpp  test_admit_model_artifact.py  test_allocator_tracker.cpp  test_backend_adapter.cpp  test_benchmark_comparator.cpp  test_c2_case_policy.cpp  test_c2_clearance_git_failure.ps1  test_c2_clearance_receipt.cpp  test_c2_clearance_schema.py  test_c2_supervisor_invocation.ps1  test_cap_semantics.cpp  test_checked_arithmetic.cpp  test_claim_taxonomy.cpp  test_config.cpp  test_evidence_bundle.cpp  (+27 more)
(+32 files in other folders)
